; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/gdiplus/extr_graphics.c_test_GdipDrawString.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/gdiplus/extr_graphics.c_test_GdipDrawString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32, i32 }
%struct.TYPE_8__ = type { i32, i64, i64, i64 }
%struct.TYPE_10__ = type { i32, i32, i32 }

@hwnd = common dso_local global i32 0, align 4
@test_GdipDrawString.string = internal constant [5 x i8] c"Test\00", align 1
@test_GdipDrawString.positions = internal constant [4 x %struct.TYPE_9__] [%struct.TYPE_9__ zeroinitializer, %struct.TYPE_9__ { i32 1, i32 1 }, %struct.TYPE_9__ { i32 2, i32 2 }, %struct.TYPE_9__ { i32 3, i32 3 }], align 16
@.str = private unnamed_addr constant [6 x i8] c"Arial\00", align 1
@DEFAULT_CHARSET = common dso_local global i32 0, align 4
@Ok = common dso_local global i32 0, align 4
@NotTrueTypeFont = common dso_local global i64 0, align 8
@FileNotFound = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [22 x i8] c"Arial not installed.\0A\00", align 1
@DriverStringOptionsCmapLookup = common dso_local global i32 0, align 4
@InvalidParameter = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_GdipDrawString to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_GdipDrawString() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca %struct.TYPE_8__, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_10__, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store i32* null, i32** %2, align 8
  store i32* null, i32** %3, align 8
  %10 = load i32, i32* @hwnd, align 4
  %11 = call i32 @GetDC(i32 %10)
  store i32 %11, i32* %8, align 4
  %12 = call i32 @memset(%struct.TYPE_10__* %7, i32 0, i32 12)
  %13 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %7, i32 0, i32 2
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @strcpy(i32 %14, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %16 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %7, i32 0, i32 0
  store i32 12, i32* %16, align 4
  %17 = load i32, i32* @DEFAULT_CHARSET, align 4
  %18 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %7, i32 0, i32 1
  store i32 %17, i32* %18, align 4
  %19 = load i32, i32* %8, align 4
  %20 = call i64 @GdipCreateFromHDC(i32 %19, i32** %2)
  store i64 %20, i64* %1, align 8
  %21 = load i32, i32* @Ok, align 4
  %22 = load i64, i64* %1, align 8
  %23 = call i32 @expect(i32 %21, i64 %22)
  %24 = load i32, i32* %8, align 4
  %25 = call i64 @GdipCreateFontFromLogfontA(i32 %24, %struct.TYPE_10__* %7, i32** %3)
  store i64 %25, i64* %1, align 8
  %26 = load i64, i64* %1, align 8
  %27 = load i64, i64* @NotTrueTypeFont, align 8
  %28 = icmp eq i64 %26, %27
  br i1 %28, label %33, label %29

29:                                               ; preds = %0
  %30 = load i64, i64* %1, align 8
  %31 = load i64, i64* @FileNotFound, align 8
  %32 = icmp eq i64 %30, %31
  br i1 %32, label %33, label %35

33:                                               ; preds = %29, %0
  %34 = call i32 @skip(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0))
  br label %145

35:                                               ; preds = %29
  %36 = load i32, i32* @Ok, align 4
  %37 = load i64, i64* %1, align 8
  %38 = call i32 @expect(i32 %36, i64 %37)
  %39 = call i64 @GdipCreateSolidFill(i32 -559038737, i32** %6)
  store i64 %39, i64* %1, align 8
  %40 = load i32, i32* @Ok, align 4
  %41 = load i64, i64* %1, align 8
  %42 = call i32 @expect(i32 %40, i64 %41)
  %43 = call i64 @GdipCreateStringFormat(i32 0, i32 0, i32** %5)
  store i64 %43, i64* %1, align 8
  %44 = load i32, i32* @Ok, align 4
  %45 = load i64, i64* %1, align 8
  %46 = call i32 @expect(i32 %44, i64 %45)
  %47 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %4, i32 0, i32 3
  store i64 0, i64* %47, align 8
  %48 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %4, i32 0, i32 2
  store i64 0, i64* %48, align 8
  %49 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %4, i32 0, i32 1
  store i64 0, i64* %49, align 8
  %50 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %4, i32 0, i32 0
  store i32 12, i32* %50, align 8
  %51 = load i32*, i32** %2, align 8
  %52 = load i32*, i32** %3, align 8
  %53 = load i32*, i32** %5, align 8
  %54 = load i32*, i32** %6, align 8
  %55 = call i64 @GdipDrawString(i32* %51, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @test_GdipDrawString.string, i64 0, i64 0), i32 4, i32* %52, %struct.TYPE_8__* %4, i32* %53, i32* %54)
  store i64 %55, i64* %1, align 8
  %56 = load i32, i32* @Ok, align 4
  %57 = load i64, i64* %1, align 8
  %58 = call i32 @expect(i32 %56, i64 %57)
  %59 = call i64 @GdipCreateMatrix(i32** %9)
  store i64 %59, i64* %1, align 8
  %60 = load i32, i32* @Ok, align 4
  %61 = load i64, i64* %1, align 8
  %62 = call i32 @expect(i32 %60, i64 %61)
  %63 = load i32*, i32** %3, align 8
  %64 = load i32*, i32** %6, align 8
  %65 = load i32, i32* @DriverStringOptionsCmapLookup, align 4
  %66 = load i32*, i32** %9, align 8
  %67 = call i64 @GdipDrawDriverString(i32* null, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @test_GdipDrawString.string, i64 0, i64 0), i32 4, i32* %63, i32* %64, %struct.TYPE_9__* getelementptr inbounds ([4 x %struct.TYPE_9__], [4 x %struct.TYPE_9__]* @test_GdipDrawString.positions, i64 0, i64 0), i32 %65, i32* %66)
  store i64 %67, i64* %1, align 8
  %68 = load i32, i32* @InvalidParameter, align 4
  %69 = load i64, i64* %1, align 8
  %70 = call i32 @expect(i32 %68, i64 %69)
  %71 = load i32*, i32** %2, align 8
  %72 = load i32*, i32** %3, align 8
  %73 = load i32*, i32** %6, align 8
  %74 = load i32, i32* @DriverStringOptionsCmapLookup, align 4
  %75 = load i32*, i32** %9, align 8
  %76 = call i64 @GdipDrawDriverString(i32* %71, i8* null, i32 4, i32* %72, i32* %73, %struct.TYPE_9__* getelementptr inbounds ([4 x %struct.TYPE_9__], [4 x %struct.TYPE_9__]* @test_GdipDrawString.positions, i64 0, i64 0), i32 %74, i32* %75)
  store i64 %76, i64* %1, align 8
  %77 = load i32, i32* @InvalidParameter, align 4
  %78 = load i64, i64* %1, align 8
  %79 = call i32 @expect(i32 %77, i64 %78)
  %80 = load i32*, i32** %2, align 8
  %81 = load i32*, i32** %6, align 8
  %82 = load i32, i32* @DriverStringOptionsCmapLookup, align 4
  %83 = load i32*, i32** %9, align 8
  %84 = call i64 @GdipDrawDriverString(i32* %80, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @test_GdipDrawString.string, i64 0, i64 0), i32 4, i32* null, i32* %81, %struct.TYPE_9__* getelementptr inbounds ([4 x %struct.TYPE_9__], [4 x %struct.TYPE_9__]* @test_GdipDrawString.positions, i64 0, i64 0), i32 %82, i32* %83)
  store i64 %84, i64* %1, align 8
  %85 = load i32, i32* @InvalidParameter, align 4
  %86 = load i64, i64* %1, align 8
  %87 = call i32 @expect(i32 %85, i64 %86)
  %88 = load i32*, i32** %2, align 8
  %89 = load i32*, i32** %3, align 8
  %90 = load i32, i32* @DriverStringOptionsCmapLookup, align 4
  %91 = load i32*, i32** %9, align 8
  %92 = call i64 @GdipDrawDriverString(i32* %88, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @test_GdipDrawString.string, i64 0, i64 0), i32 4, i32* %89, i32* null, %struct.TYPE_9__* getelementptr inbounds ([4 x %struct.TYPE_9__], [4 x %struct.TYPE_9__]* @test_GdipDrawString.positions, i64 0, i64 0), i32 %90, i32* %91)
  store i64 %92, i64* %1, align 8
  %93 = load i32, i32* @InvalidParameter, align 4
  %94 = load i64, i64* %1, align 8
  %95 = call i32 @expect(i32 %93, i64 %94)
  %96 = load i32*, i32** %2, align 8
  %97 = load i32*, i32** %3, align 8
  %98 = load i32*, i32** %6, align 8
  %99 = load i32, i32* @DriverStringOptionsCmapLookup, align 4
  %100 = load i32*, i32** %9, align 8
  %101 = call i64 @GdipDrawDriverString(i32* %96, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @test_GdipDrawString.string, i64 0, i64 0), i32 4, i32* %97, i32* %98, %struct.TYPE_9__* null, i32 %99, i32* %100)
  store i64 %101, i64* %1, align 8
  %102 = load i32, i32* @InvalidParameter, align 4
  %103 = load i64, i64* %1, align 8
  %104 = call i32 @expect(i32 %102, i64 %103)
  %105 = load i32*, i32** %2, align 8
  %106 = load i32*, i32** %3, align 8
  %107 = load i32*, i32** %6, align 8
  %108 = load i32, i32* @DriverStringOptionsCmapLookup, align 4
  %109 = or i32 %108, 16
  %110 = load i32*, i32** %9, align 8
  %111 = call i64 @GdipDrawDriverString(i32* %105, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @test_GdipDrawString.string, i64 0, i64 0), i32 4, i32* %106, i32* %107, %struct.TYPE_9__* getelementptr inbounds ([4 x %struct.TYPE_9__], [4 x %struct.TYPE_9__]* @test_GdipDrawString.positions, i64 0, i64 0), i32 %109, i32* %110)
  store i64 %111, i64* %1, align 8
  %112 = load i32, i32* @Ok, align 4
  %113 = load i64, i64* %1, align 8
  %114 = call i32 @expect(i32 %112, i64 %113)
  %115 = load i32*, i32** %2, align 8
  %116 = load i32*, i32** %3, align 8
  %117 = load i32*, i32** %6, align 8
  %118 = load i32, i32* @DriverStringOptionsCmapLookup, align 4
  %119 = call i64 @GdipDrawDriverString(i32* %115, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @test_GdipDrawString.string, i64 0, i64 0), i32 4, i32* %116, i32* %117, %struct.TYPE_9__* getelementptr inbounds ([4 x %struct.TYPE_9__], [4 x %struct.TYPE_9__]* @test_GdipDrawString.positions, i64 0, i64 0), i32 %118, i32* null)
  store i64 %119, i64* %1, align 8
  %120 = load i32, i32* @Ok, align 4
  %121 = load i64, i64* %1, align 8
  %122 = call i32 @expect(i32 %120, i64 %121)
  %123 = load i32*, i32** %2, align 8
  %124 = load i32*, i32** %3, align 8
  %125 = load i32*, i32** %6, align 8
  %126 = load i32, i32* @DriverStringOptionsCmapLookup, align 4
  %127 = load i32*, i32** %9, align 8
  %128 = call i64 @GdipDrawDriverString(i32* %123, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @test_GdipDrawString.string, i64 0, i64 0), i32 4, i32* %124, i32* %125, %struct.TYPE_9__* getelementptr inbounds ([4 x %struct.TYPE_9__], [4 x %struct.TYPE_9__]* @test_GdipDrawString.positions, i64 0, i64 0), i32 %126, i32* %127)
  store i64 %128, i64* %1, align 8
  %129 = load i32, i32* @Ok, align 4
  %130 = load i64, i64* %1, align 8
  %131 = call i32 @expect(i32 %129, i64 %130)
  %132 = load i32*, i32** %9, align 8
  %133 = call i32 @GdipDeleteMatrix(i32* %132)
  %134 = load i32*, i32** %2, align 8
  %135 = call i32 @GdipDeleteGraphics(i32* %134)
  %136 = load i32*, i32** %6, align 8
  %137 = call i32 @GdipDeleteBrush(i32* %136)
  %138 = load i32*, i32** %3, align 8
  %139 = call i32 @GdipDeleteFont(i32* %138)
  %140 = load i32*, i32** %5, align 8
  %141 = call i32 @GdipDeleteStringFormat(i32* %140)
  %142 = load i32, i32* @hwnd, align 4
  %143 = load i32, i32* %8, align 4
  %144 = call i32 @ReleaseDC(i32 %142, i32 %143)
  br label %145

145:                                              ; preds = %35, %33
  ret void
}

declare dso_local i32 @GetDC(i32) #1

declare dso_local i32 @memset(%struct.TYPE_10__*, i32, i32) #1

declare dso_local i32 @strcpy(i32, i8*) #1

declare dso_local i64 @GdipCreateFromHDC(i32, i32**) #1

declare dso_local i32 @expect(i32, i64) #1

declare dso_local i64 @GdipCreateFontFromLogfontA(i32, %struct.TYPE_10__*, i32**) #1

declare dso_local i32 @skip(i8*) #1

declare dso_local i64 @GdipCreateSolidFill(i32, i32**) #1

declare dso_local i64 @GdipCreateStringFormat(i32, i32, i32**) #1

declare dso_local i64 @GdipDrawString(i32*, i8*, i32, i32*, %struct.TYPE_8__*, i32*, i32*) #1

declare dso_local i64 @GdipCreateMatrix(i32**) #1

declare dso_local i64 @GdipDrawDriverString(i32*, i8*, i32, i32*, i32*, %struct.TYPE_9__*, i32, i32*) #1

declare dso_local i32 @GdipDeleteMatrix(i32*) #1

declare dso_local i32 @GdipDeleteGraphics(i32*) #1

declare dso_local i32 @GdipDeleteBrush(i32*) #1

declare dso_local i32 @GdipDeleteFont(i32*) #1

declare dso_local i32 @GdipDeleteStringFormat(i32*) #1

declare dso_local i32 @ReleaseDC(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
